k8s/items-deployment-v12.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items-v12
  labels:
    app: items
    version: v12
spec:
  selector:
    matchLabels:
      app: items
      version: v12
  template:
    metadata:
      labels:
        app: items
        version: v12
    spec:
      containers:
      - name: items
        image: clazz/items-svc:12
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
