k8s/items-deployment-v9.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items-v9
  labels:
    app: items
    version: v9
spec:
  selector:
    matchLabels:
      app: items
      version: v9
  template:
    metadata:
      labels:
        app: items
        version: v9
    spec:
      containers:
      - name: items
        image: clazz/items-svc:9
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
