k8s/items-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: items
spec:
  selector:
    app: items
  ports:
  - port: 80
    targetPort: 8080
