k8s/items.yaml
apiVersion: v1
kind: Service
metadata:
  name: items
spec:
  selector:
    app: items
  ports:
  - port: 80
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items
  labels:
    version: v1
spec:
  selector:
    matchLabels:
      app: items
  template:
    metadata:
      labels:
        app: items
    spec:
      containers:
      - name: items
        image: clazz/items-svc:7
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
