k8s/items-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: items-vs-from-gw
spec:
  hosts:
  - "estoque.clazz.dev"
  gateways:
  - estoque-gateway
  http:
    # - match:
    #   - headers:
    #       x-domain:
    #         exact: "internal"
    #   route:
    #   - destination:
    #       host: items
    #       subset: version-v1
    - route:
      - destination:
          host: items
          subset: version-v8
        weight: 100
      mirror:
        host: items
        subset: version-v12
