k8s/proxy.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name:  items-gw
spec:
  selector: 
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: items-vs-from-gw
spec:
  hosts:
  - "*"
  gateways:
  - items-gw
  http:
  - route:
    - destination:
        host: items
        port:
          number: 80
